<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="45dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.008" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/welcome_back"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_login_comment"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_login_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/please_login_to_your_account"
            android:textColor="@color/colorGray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_login_error"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="320dp" />

        <TextView
            android:id="@+id/tv_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/et_username"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/et_username"
            style="@style/LoginEditTextStyle"
            android:layout_marginBottom="2dp"
            android:background="@drawable/border_username"
            android:hint="@string/username"
            android:text="@string/kitchen_username"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/LoginEditTextStyle"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_password"
            android:hint="@string/password"
            android:text="@string/kitchen_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_login_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/tv_forget_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toTopOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorGray"
            app:layout_constraintBottom_toTopOf="@id/tv_terms"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
