...
    <fragment
        android:id="@+id/fragment_home"
        android:name="com.matinfard.kitchenordering.view.productlist.ProductListFragment"
        android:label="HomeFragmnet"
        tools:layout="@layout/fragment_view_list" >
        <action
            android:id="@+id/action_viewListFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_login"
        android:name="com.matinfard.kitchenordering.view.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_viewListFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@+id/main_navigation"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragmnt"
...
