<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_wrapper_layout"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="@color/colorWhite"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:text="@string/product_name"
        android:textColor="@color/colorPrimaryBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_food"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

    <ImageView
        android:id="@+id/img_product_selected"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_selected"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/tv_product_name"
        app:layout_constraintTop_toTopOf="@id/tv_product_name" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:textColor="@color/colorGray"
        android:textStyle="bold|italic"
        app:layout_constraintRight_toLeftOf="@id/img_euro"
        app:layout_constraintTop_toTopOf="@id/img_euro"
        app:layout_constraintBottom_toBottomOf="@id/img_euro"/>

    <ImageView
        android:id="@+id/img_euro"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_euro"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@drawable/border_add_to_cart"
        android:text="@string/add_to_cart"
        android:textColor="@color/colorWhite"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/img_product"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/v_product"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightGrayBorder"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

