...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_order"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_add_to_cart"
        android:text="@string/order"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"
...
